# clinker

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CROSS_RECORD_TRANSFORMS_PLAN.md  Cargo.toml  PHASE2B_CODEBASE_SNAPSHOT.md  README.md  clinker-kiln-inspector-autodoc-addendum-v2.md  clinker-kiln-spec.md  deny.toml
crates/clinker/: AGENTS.md  Cargo.toml  out.csv
crates/clinker-bench-support/: AGENTS.md  Cargo.toml
crates/clinker-bench-support/src/: alloc.rs  cache.rs  combine.rs  io.rs  lib.rs
crates/clinker-bench-support/tests/: bench_alloc.rs
crates/clinker-benchmarks/: AGENTS.md  Cargo.toml
crates/clinker-benchmarks/benches/: e2e_matrix.rs  e2e_xlarge.rs
crates/clinker-benchmarks/src/: format_mapping.rs  lib.rs  report.rs  runner.rs
crates/clinker-channel/: AGENTS.md  Cargo.toml
crates/clinker-channel/benches/: channel_merge.rs
crates/clinker-channel/src/: binding.rs  channel_override.rs  composition.rs  derivation.rs  discovery.rs  dotted.rs  error.rs  group.rs  lib.rs  manifest.rs  overlay.rs  resolve.rs  selector.rs  staging.rs  staging_copy.rs  workspace.rs
crates/clinker-channel/tests/: channel_binding_test.rs  channel_manifest_test.rs  channel_merge_test.rs  channel_var_overlay_test.rs  discovery_test.rs  e2e_tests.rs  group_parse_test.rs  overlay_resolution_test.rs  source_patch_parse_test.rs  staging_reuse_concurrent.rs
crates/clinker-core/: Cargo.toml
crates/clinker-core-types/: AGENTS.md  Cargo.toml
crates/clinker-core-types/src/: diagnostic.rs  dlq.rs  graph.rs  lib.rs  span.rs
crates/clinker-core/benches/: arbitration_poll.rs  arena.rs  combine.rs  combine_grace_hash.rs  combine_iejoin.rs  combine_nary_3input.rs  composition.rs  deferred_buffer_pruning.rs  parallel.rs  pipeline.rs  provenance.rs  sort.rs  window.rs
crates/clinker-core/src/: aggregation.rs  composition.rs  config.rs  dlq.rs  error.rs  executor.rs  graph.rs  integration_tests.rs  lib.rs  log_dispatch.rs  log_rules.rs  log_template.rs  metrics.rs  modules.rs  partial.rs  progress.rs  projection.rs  security.rs  span.rs  test_helpers.rs  validation.rs  yaml.rs
crates/clinker-core/tests/: aggregate_integration.rs  aggregation_dispatch.rs  arbitration_fast_source_slow_combine.rs  arbitration_hard_limit_overshoot.rs  arbitration_two_aggregate_largest_first.rs  auto_widen_integration.rs  batch_size_config.rs  bench_config_validation.rs  bind_schema_test.rs  branching.rs  ck_aligned_partition_runtime.rs  combine_build_direct_rollback.rs  combine_grouped_output_row_dlq.rs  combine_iejoin_prop.rs  combine_propagate_ck_test.rs  combine_test.rs  composition_binding_test.rs  composition_body_window.rs  composition_combine_test.rs  composition_executor_test.rs  composition_loader_test.rs  composition_port_admission_hard_fail.rs  correlated_dlq.rs  correlated_dlq_retract.rs  correlated_post_aggregate_retract.rs  correlated_window_after_aggregate_retract.rs  correlated_window_retract.rs  correlation_composition_test.rs  correlation_overflow_rewind.rs  cross_source_window_topology.rs  deferred_dispatch.rs  diamond_hard_fail.rs  dlq_rate_threshold.rs  envelope_doc_context_test.rs  explain_arbitration.rs  fan_out_writers_test.rs  format_dispatch.rs  intra_record_closures.rs  memory_backpressure.rs  merge_interleave.rs  (+46 more)
crates/clinker-exec/: AGENTS.md  Cargo.toml
crates/clinker-exec/benches/: arbitration_poll.rs  arena.rs  combine.rs  combine_grace_hash.rs  combine_iejoin.rs  combine_nary_3input.rs  composition.rs  deferred_buffer_pruning.rs  parallel.rs  pipeline.rs  provenance.rs  sort.rs  spill_compression.rs  window.rs
crates/clinker-exec/src/: dlq.rs  exit_codes.rs  integration_tests.rs  lib.rs  log_rules.rs  log_template.rs  metrics.rs  modules.rs  partial.rs  progress.rs  projection.rs
crates/clinker-exec/tests/: aggregate_integration.rs  aggregate_materialized_fixes.rs  aggregate_per_document_flush.rs  aggregate_spill_cap.rs  aggregation_dispatch.rs  arbitration_fast_source_slow_combine.rs  arbitration_hard_limit_overshoot.rs  arbitration_two_aggregate_largest_first.rs  auto_widen_integration.rs  bench_config_validation.rs  bind_schema_test.rs  branching.rs  ck_aligned_partition_runtime.rs  combine_build_direct_rollback.rs  combine_datetime_nanos.rs  combine_grouped_output_row_dlq.rs  combine_iejoin_prop.rs  combine_match_first_body_skip.rs  combine_per_document_flush.rs  combine_propagate_ck_test.rs  combine_test.rs  compiled_path_e2e.rs  composition_binding_test.rs  composition_body_window.rs  composition_combine_test.rs  composition_executor_test.rs  correlated_dlq.rs  correlated_dlq_retract.rs  correlated_post_aggregate_retract.rs  correlated_window_after_aggregate_retract.rs  correlated_window_retract.rs  correlation_composition_test.rs  correlation_overflow_rewind.rs  cross_scope_doc_attribution_test.rs  cross_source_window_topology.rs  csv_charset.rs  csv_join_values_e2e.rs  csv_split_values_e2e.rs  cull_explain_snapshot.rs  cull_pipeline.rs  (+68 more)
crates/clinker-format/: AGENTS.md  Cargo.toml
crates/clinker-format/benches/: io_throughput.rs
crates/clinker-format/src/: bom.rs  charset.rs  counting.rs  doc_index.rs  envelope.rs  envelope_writer.rs  error.rs  lib.rs  multi_record.rs  multi_value.rs  schema.rs  segment_tokenizer.rs  source.rs  traits.rs
crates/clinker-format/tests/: reader_dos_json.rs  reader_dos_xml.rs  streaming_doc_index_json.rs  streaming_doc_index_xml.rs  writer_array_rejection.rs
crates/clinker-kiln/: Cargo.toml  Dioxus.toml
crates/clinker-kiln/assets/: kiln.css
crates/clinker-kiln/src/: app.rs  autodoc.rs  channel_resolve.rs  commands.rs  composition_index.rs  composition_ops.rs  cxl_bridge.rs  debug_state.rs  demo.rs  file_ops.rs  fs_watcher.rs  keyboard.rs  main.rs  notes.rs  pipeline_view.rs  recent_files.rs  search.rs  (+5 more)
crates/clinker-lineage/: Cargo.toml
crates/clinker-net/: AGENTS.md  Cargo.toml
crates/clinker-plan/: AGENTS.md  Cargo.toml
crates/clinker-record/: AGENTS.md  Cargo.toml
crates/clinker-schema/: AGENTS.md  Cargo.toml
crates/cxl/: AGENTS.md  Cargo.toml
crates/cxl-cli/: AGENTS.md  Cargo.toml
(+1196 files in other folders)
