[workspace]
resolver = "2"
members = [
    "crates/clinker-record",
    "crates/cxl",
    "crates/cxl-cli",
    "crates/clinker-format",
    "crates/clinker-core",
    "crates/clinker-channel",
    "crates/clinker",
    "crates/clinker-kiln",
    "crates/clinker-schema",
    "crates/clinker-git",
    "crates/clinker-bench-support",
    "crates/clinker-benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
clinker-record = { path = "crates/clinker-record" }
cxl = { path = "crates/cxl" }
clinker-format = { path = "crates/clinker-format" }
clinker-core = { path = "crates/clinker-core" }
clinker-channel = { path = "crates/clinker-channel" }
clinker-schema = { path = "crates/clinker-schema" }
clinker-git = { path = "crates/clinker-git" }

toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde-saphyr = { version = "=0.0.23", features = ["miette"] }
chrono = { version = "0.4", features = ["serde"] }
miette = { version = "7", features = ["fancy"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
ahash = "0.8"
indexmap = { version = "2", features = ["serde"] }
tracing = "0.1"
static_assertions = "1"
dioxus = { version = "=0.7.4" }
rfd = "0.15"
blake3 = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tokio = { version = "1", features = ["time", "rt"] }
notify = "7"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"
petgraph = "0.8"
fastrand = "2"
quick-xml = "0.37"
clinker-bench-support = { path = "crates/clinker-bench-support" }
tempfile = "3"

[workspace.metadata.release]
shared-version = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
