[workspace]
resolver = "2"
members = [
    "crates/clinker-record",
    "crates/cxl",
    "crates/cxl-cli",
    "crates/clinker-format",
    "crates/clinker-core-types",
    "crates/clinker-plan",
    "crates/clinker-exec",
    "crates/clinker-net",
    "crates/clinker-channel",
    "crates/clinker",
    "crates/clinker-schema",
    "crates/clinker-bench-support",
    "crates/clinker-benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
clinker-record = { path = "crates/clinker-record" }
cxl = { path = "crates/cxl" }
clinker-format = { path = "crates/clinker-format" }
clinker-core-types = { path = "crates/clinker-core-types" }
clinker-plan = { path = "crates/clinker-plan" }
clinker-exec = { path = "crates/clinker-exec" }
clinker-net = { path = "crates/clinker-net" }
clinker-channel = { path = "crates/clinker-channel" }
clinker-schema = { path = "crates/clinker-schema" }

toml = "0.8"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde-saphyr = { version = "=0.0.23", features = ["miette"] }
chrono = { version = "0.4", features = ["serde"] }
miette = { version = "7", features = ["fancy"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
ahash = "0.8"
indexmap = { version = "2", features = ["serde"] }
tracing = "0.1"
arc-swap = "1.9"
static_assertions = "1"
dioxus = { version = "=0.7.4" }
rfd = "0.15"
# `pure` is misleadingly named: on blake3 1.x it does NOT mean scalar. It
# compiles the SSE2/SSE4.1/AVX2 paths as Rust `std::arch` intrinsics and
# dispatches them at runtime via `cpufeatures`, so source-staging copies hash
# at full SIMD speed on every x86_64 host. What `pure` gives up is the
# hand-written assembly / AVX-512 variants — and those are built by invoking a
# C toolchain through blake3's `cc` build-dependency, which the workspace's
# pure-Rust pillar (no C build dependencies in clinker crates) forbids. Keeping
# `pure` therefore buys SIMD without a build-time C compiler: the correct trade
# for this repo, not a performance compromise.
blake3 = { version = "1", default-features = false, features = ["pure"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread", "macros", "sync"] }
crossbeam-channel = "0.5"
notify = "7"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"
petgraph = "0.8"
fastrand = "2"
quick-xml = "0.37"
# Synchronous HTTP client for the `rest` source transport. rustls + ring
# only (pure-Rust TLS) — `default-features = false` drops the native-tls
# path so no openssl/native-tls/cmake enters the graph.
ureq = { version = "3", default-features = false, features = ["rustls"] }
clinker-bench-support = { path = "crates/clinker-bench-support" }
tempfile = "3"
postcard = { version = "1", default-features = false, features = ["use-std"] }
proptest = "1.11"

[workspace.metadata.release]
shared-version = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.bench]
inherits = "release"
debug = "line-tables-only"
strip = "none"
