[package]
name = "clinker-bench-support"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared deterministic data generators for Clinker benchmarks"

[features]
bench-alloc = []

[dependencies]
clinker-record = { workspace = true }
fastrand = "2"
blake3 = { workspace = true }
glob = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
quick-xml = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
