[package]
name = "clinker-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "End-to-end benchmark runner and reporters for Clinker pipelines"

[features]
bench-xlarge = []

[dependencies]
clinker-core = { workspace = true }
clinker-bench-support = { workspace = true }
criterion = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bench]]
name = "e2e_matrix"
harness = false

[[bench]]
name = "e2e_xlarge"
harness = false
required-features = ["bench-xlarge"]
