[package]
name = "clinker-channel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel binding, validation, and overlay merge for Clinker"

[dependencies]
clinker-core = { workspace = true }
clinker-record = { workspace = true }
serde-saphyr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
serial_test = { workspace = true }
