[package]
name = "clinker-channel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel binding, validation, and overlay merge for Clinker"

[dependencies]
clinker-plan = { workspace = true }
clinker-core-types = { workspace = true }
clinker-record = { workspace = true }
serde-saphyr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# RFC 3339 stage-time stamp recorded in each staged file's identity manifest.
chrono = { workspace = true }
blake3 = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
thiserror = "2"
walkdir = "2"
# Per-run staging subdirectory names. v4 (random) is sufficient — the name only
# has to be collision-free within a staging root, not time-ordered.
uuid = { workspace = true }
# The per-run staging subdir is a `tempfile::TempDir`, so a panic or early exit
# removes the run's staged copies on drop — the same panic-safety story the
# executor spill root uses.
tempfile = "3"

# posix_fadvise(POSIX_FADV_SEQUENTIAL) hints the kernel to ramp readahead for
# the front-to-back staging copy. Linux-only; a no-op on other unixes and
# absent on Windows, so it never gates a build. The `fs` feature gates the
# `fcntl::posix_fadvise` binding.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["fs"] }

[dev-dependencies]
criterion = { workspace = true }
serial_test = { workspace = true }

[[bench]]
name = "channel_merge"
harness = false
