[package]
name = "clinker-core"
version.workspace = true
edition.workspace = true
description = "Pipeline orchestration, config parsing, and execution engine for Clinker"

[dependencies]
clinker-record = { workspace = true }
cxl = { workspace = true }
clinker-format = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
indexmap = { workspace = true }
rayon = "1"
crossbeam-channel = "0.5"
chrono = { workspace = true }
regex = { workspace = true }
ahash = { workspace = true }
lz4_flex = "0.11"
tempfile = "3"
tracing = { workspace = true }
miette = { workspace = true }
csv = "1"
glob = "0.3"
uuid = { version = "1", features = ["v7"] }
ctrlc = { version = "3", features = ["termination"] }
num_cpus = "1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[dev-dependencies]
csv = "1"
