[package]
name = "clinker-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pipeline orchestration, config parsing, and execution engine for Clinker"

[dependencies]
clinker-record = { workspace = true }
cxl = { workspace = true }
clinker-format = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
indexmap = { workspace = true }
rayon = "1"
crossbeam-channel = "0.5"
chrono = { workspace = true }
regex = { workspace = true }
ahash = { workspace = true }
hashbrown = "0.15"
lz4_flex = "0.11"
tempfile = "3"
tracing = { workspace = true }
miette = { workspace = true }
csv = "1"
glob = "0.3"
uuid = { version = "1", features = ["v7"] }
ctrlc = { version = "3", features = ["termination"] }
num_cpus = "1"
petgraph = { workspace = true }
libc = "0.2"
walkdir = "2"
clinker-bench-support = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[features]
test-utils = []
bench-alloc = ["dep:clinker-bench-support", "clinker-bench-support/bench-alloc"]

[dev-dependencies]
csv = "1"
criterion = { workspace = true }
clinker-bench-support = { workspace = true, features = [] }
clinker-channel = { workspace = true }
glob = "0.3"
rayon = "1"
fastrand = { workspace = true }
insta = "1"
serial_test = { workspace = true }

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "arena"
harness = false

[[bench]]
name = "window"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "parallel"
harness = false

[[bench]]
name = "provenance"
harness = false

[[bench]]
name = "composition"
harness = false

