[package]
name = "clinker-format"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Streaming CSV, XML, JSON, and fixed-width readers/writers for Clinker"

[dependencies]
clinker-record = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = "1"
quick-xml = "0.37"
chrono = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
