[package]
name = "clinker-kiln"
version.workspace = true
edition.workspace = true
description = "Clinker Kiln — IDE for authoring Clinker YAML pipeline configurations"

[dependencies]
dioxus.workspace = true
cxl.workspace = true
clinker-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
rfd.workspace = true
blake3.workspace = true
uuid.workspace = true
dirs.workspace = true
