[package]
name = "clinker-lineage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenLineage column-level lineage emission from compiled Clinker plans"

[dependencies]
clinker-plan = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
clinker-core-types = { workspace = true }
clinker-record = { workspace = true }
