[package]
name = "clinker-record"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data types (Value, Schema, Record) for the Clinker ETL engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ahash = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
clinker-bench-support = { workspace = true }

[[bench]]
name = "record_ops"
harness = false
