[package]
name = "clinker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for the Clinker ETL engine"

[dependencies]
clinker-core = { workspace = true }
clinker-channel = { workspace = true }
clinker-format = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
num_cpus = "1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
uuid = { version = "1", features = ["v7"] }
miette = { workspace = true }
