[package]
name = "cxl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CXL language parser, type checker, and evaluator"

[dependencies]
clinker-record = { workspace = true }
miette = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
ahash = { workspace = true }
tracing = { workspace = true }
static_assertions = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
clinker-bench-support = { workspace = true }

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "parse"
harness = false
